--- a/style.css
+++ b/style.css
@@ -78,3 +78,99 @@ p {
     vertical-align: middle;
 
 }
+
+.menu {
+    position: fixed;
+    list-style: none;
+    top: 0;
+    margin-top: 0;
+    background-color: aquamarine;
+    z-index: 10;
+    cursor: pointer;
+    width: 100%;
+}
+
+.links {
+    display: inline;
+    color: navy;
+    padding-left: 25px;
+    padding-right: 25px;
+    font-size: 25px;
+    font-family: 'Oswald', sans-serif;
+}
+
+.links:hover {
+    background-color: aliceblue;
+}
+
+a {
+    text-decoration: underline;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+#videos {
+    background-color: navy;
+    text-align: center;
+    width: 100%;
+    height: 800px;
+    overflow: hidden;
+}
+
+#apps {
+    background-color: aquamarine;
+    text-align: center;
+    width: 100%;
+    height: 800px;
+    overflow: hidden;
+}
+
+#games {
+    background-color: skyblue;
+    text-align: center;
+    width: 100%;
+    height: 800px;
+    overflow: hidden;
+}
+
+#chatbot {
+    background-color: yellow;
+    text-align: center;
+    width: 100%;
+    height: 800px;
+    overflow: hidden;
+}
+
+#game1 {
+    width: 400px;
+    height: 400px;
+    margin-left: 50px;
+    margin-right: 50px;
+    transition: transform .2s;
+}
+
+#game1:hover {
+    transform: scale(0.9);
+}
+
+#game2 {
+    width: 400px;
+    height: 400px;
+    margin-left: 50px;
+    margin-right: 50px;
+    transition: transform .2s;
+}
+
+#game2:hover {
+    transform: scale(0.9);
+}
+
+#contact {
+    background-color: red;
+    text-align: center;
+    width: 100%;
+    height: 800px;
+    overflow: hidden;
+}
