--- a/style.css
+++ b/style.css
@@ -49,7 +49,11 @@ h2 {
 }
 
 #bio {
-
+    background-color: Cyan;
+    text-align: center;
+    width: 100%;
+    height: 800px;
+    overflow: hidden;
     padding: 50px;
     text-align: center;
     font-size: 42px;
