--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ h2 {
     padding: 50px;
     text-align: center;
     font-size: 42px;
+    padding-top:300px;
 }
 
 .line {
@@ -177,4 +178,13 @@ html {
     width: 100%;
     height: 800px;
     overflow: hidden;
+}
+
+.contact_1 a {
+    color: white;
+    text-shadow: none;
+}
+
+.contact_1 h3 {
+    display: inline;
 }
